devel/xdg-utils: drop runtime dep on x11 utilities

--- a/devel/xdg-utils/Makefile
+++ b/devel/xdg-utils/Makefile
@@ -14,9 +14,7 @@ LICENSE=	MIT
 LICENSE_FILE=	${WRKSRC}/LICENSE
 
 BUILD_DEPENDS=	minixmlto:textproc/minixmlto
-RUN_DEPENDS=	${LOCALBASE}/share/icons/hicolor/index.theme:misc/hicolor-icon-theme \
-		xprop:x11/xprop \
-		xset:x11/xset
+RUN_DEPENDS=	${LOCALBASE}/share/icons/hicolor/index.theme:misc/hicolor-icon-theme
 
 USES=		gmake
 
