--- a/graphics/evince/Makefile
+++ b/graphics/evince/Makefile
@@ -2,7 +2,7 @@
 # $FreeBSD$
 
 PORTNAME=	evince
-PORTVERSION=	3.32.1
+PORTVERSION=	3.36.0
 CATEGORIES=	graphics print gnome
 MASTER_SITES=	GNOME
 DIST_SUBDIR=	gnome
@@ -14,6 +14,7 @@ LICENSE=	GPLv2
 LICENSE_FILE=	${WRKSRC}/COPYING
 
 BUILD_DEPENDS=	itstool:textproc/itstool \
+		gtkdoc-check:textproc/gtk-doc \
 		adwaita-icon-theme>=0:x11-themes/adwaita-icon-theme \
 		gsettings-desktop-schemas>=0:devel/gsettings-desktop-schemas
 LIB_DEPENDS=	libpoppler-glib.so:graphics/poppler-glib \
@@ -26,28 +27,22 @@ RUN_DEPENDS=	adwaita-icon-theme>=0:x11-themes/adwaita-icon-theme \
 PORTSCOUT=	limitw:1,even
 SLAVEPORT?=	no
 
-USES=		compiler:c++11-lib desktop-file-utils gettext gmake \
-		gnome libarchive libtool localbase pathfix pkgconfig tar:xz xorg
+USES=		compiler:c++11-lib desktop-file-utils gettext \
+		gnome libarchive localbase meson pkgconfig tar:xz
 USE_GNOME=	cairo gtk30 intlhack
 USE_GSTREAMER1=	yes
 USE_LDCONFIG=	yes
-GNU_CONFIGURE=	yes
-USE_XORG=	ice
 INSTALLS_ICONS=	yes
-CONFIGURE_ARGS=	--enable-compile-warnings=minimum \
-		--enable-ps \
-		--with-systemduserunitdir=no
-INSTALL_TARGET=	install-strip
+MESON_ARGS=	-Dps=enabled
 
 .if ${SLAVEPORT} == lite
-CONFIGURE_ARGS+=--disable-introspection \
-		--disable-libgnome-desktop \
-		--disable-thumbnailer \
-		--disable-previewer
+MESON_ARGS+=-Dintrospection=false \
+		-Dthumbnail_cache=false \
+		-Dthumbnailer=false \
+		-Dpreviewer=false
 USE_GNOME+=	libxml2
 .else
 USE_GNOME+=	introspection:build
-CONFIGURE_ARGS+=	--enable-introspection
 .endif
 
 GLIB_SCHEMAS=	org.gnome.Evince.gschema.xml
@@ -59,44 +54,39 @@ OPTIONS_DEFINE=	COMICS DBUS DJVU DVI KEYRING NAUTILUS GSPELL T1LIB XPS
 OPTIONS_DEFAULT=COMICS DBUS DJVU KEYRING NAUTILUS GSPELL XPS
 
 COMICS_DESC=			Comic book archives support
-COMICS_CONFIGURE_ENABLE=	comics
+COMICS_MESON_ENABLED=	comics
 
 DJVU_DESC=		DJVU support
 DJVU_LIB_DEPENDS=	libdjvulibre.so:graphics/djvulibre
-DJVU_CONFIGURE_ENABLE=	djvu
+DJVU_MESON_ENABLED=	djvu
 
-DBUS_CONFIGURE_ENABLE=	dbus
+DBUS_MESON_TRUE=	dbus
 DBUS_LIB_DEPENDS=	libdbus-1.so:devel/dbus
 
 DVI_DESC=		DVI viewer support
 DVI_USE=		tex=latex,kpathsea
-DVI_CONFIGURE_ENABLE=	dvi
+DVI_MESON_ENABLED=	dvi
 
 GSPELL_DESC=		Spell checking via gspell
-GSPELL_CONFIGURE_WITH=	gspell
+GSPELL_MESON_ENABLED=	gspell
 GSPELL_LIB_DEPENDS=	libenchant-2.so:textproc/enchant2 \
 			libgspell-1.so:textproc/gspell
 
 KEYRING_DESC=			Keyring support
 KEYRING_LIB_DEPENDS=		libsecret-1.so:security/libsecret
-KEYRING_CONFIGURE_WITH=		keyring
+KEYRING_MESON_ENABLED=		keyring
 
 NAUTILUS_DESC=			Nautilus plugin
 NAUTILUS_USE=			gnome=nautilus3
-NAUTILUS_CONFIGURE_ENABLE=	nautilus
+NAUTILUS_MESON_TRUE=	nautilus
 
 T1LIB_DESC=		Support TYPE1 fonts to DVI (Enables DVI)
 T1LIB_LIB_DEPENDS=	libt1.so:devel/t1lib
-T1LIB_CONFIGURE_ENABLE=	t1lib
+T1LIB_MESON_ENABLED=	t1lib
 T1LIB_IMPLIES=		DVI
 
 XPS_DESC=	XPS support
 XPS_LIB_DEPENDS=	libgxps.so:graphics/libgxps
-XPS_CONFIGURE_ENABLE=	xps
-
-post-patch:
-	@${REINPLACE_CMD} -e '/^DOC_MODULE_VERSION/d' \
-		${WRKSRC}/help/reference/libdocument/Makefile.in \
-		${WRKSRC}/help/reference/libview/Makefile.in
+XPS_MESON_ENABLED=	xps
 
 .include <bsd.port.mk>
