--- a/devel/libical/Makefile
+++ b/devel/libical/Makefile
@@ -2,8 +2,7 @@
 # $FreeBSD$
 
 PORTNAME=	libical
-PORTVERSION=	3.0.4
-PORTREVISION=	5
+PORTVERSION=	3.0.8
 CATEGORIES=	devel
 MASTER_SITES=	https://github.com/libical/libical/releases/download/v${PORTVERSION}/
 
@@ -23,7 +22,7 @@ USE_LDCONFIG=	yes
 MAKE_JOBS_UNSAFE=	yes
 
 CMAKE_ARGS=	-DICAL_BUILD_DOCS=false
-CFLAGS_amd64=	-fPIC
+CFLAGS+=	-fPIC
 
 OPTIONS_DEFINE=		GLIB INTROSPECTION VALA
 OPTIONS_DEFAULT=	GLIB INTROSPECTION VALA
