--- a/devel/glib20/Makefile
+++ b/devel/glib20/Makefile
@@ -2,7 +2,7 @@
 # $FreeBSD$
 
 PORTNAME=	glib
-PORTVERSION=	2.62.4
+PORTVERSION=	2.64.2
 PORTEPOCH=	1
 CATEGORIES=	devel
 MASTER_SITES=	GNOME
@@ -29,14 +29,14 @@ USE_PYTHON=	py3kplist
 USE_PERL5=	build
 USE_LDCONFIG=	yes
 MESON_ARGS=	-Db_lundef=false \
-		-Dlibmount=false \
+		-Dlibmount=disabled \
 		-Dselinux=disabled \
 		-Dinstalled_tests=false \
 		-Dxattr=false
 BINARY_ALIAS=	python3=${PYTHON_VERSION}
 SSP_CFLAGS?=	-fstack-protector # XXX -strong crashes qemu-user-static
 
-LIBVERSION=	0.6200.4
+LIBVERSION=	0.6400.2
 PLIST_SUB+=	LIBVERSION=${LIBVERSION}
 
 glib_MAN=	gtester.1 gtester-report.1 glib-gettextize.1
