--- a/devel/gvfs/Makefile
+++ b/devel/gvfs/Makefile
@@ -2,8 +2,7 @@
 # $FreeBSD$
 
 PORTNAME=	gvfs
-PORTVERSION=	1.30.4
-PORTREVISION=	3
+PORTVERSION=	1.44.1
 CATEGORIES=	devel gnome
 MASTER_SITES=	GNOME
 DIST_SUBDIR=	gnome
@@ -18,6 +17,7 @@ BUILD_DEPENDS=	docbook-xsl>=0:textproc/docbook-xsl
 LIB_DEPENDS=	libdbus-1.so:devel/dbus \
 		libsoup-gnome-2.4.so:devel/libsoup-gnome \
 		libsoup-2.4.so:devel/libsoup \
+		libgoa-1.0.so:net/gnome-online-accounts \
 		libgcrypt.so:security/libgcrypt \
 		libgcr-base-3.so:security/gcr \
 		libsecret-1.so:security/libsecret \
@@ -31,58 +31,58 @@ LIB_DEPENDS=	libdbus-1.so:devel/dbus \
 		libjson-glib-1.0.so:devel/json-glib
 PORTSCOUT=	limitw:1,even
 
-USES=		gettext gmake gnome libarchive libtool localbase \
-		pathfix pkgconfig tar:xz
-USE_GNOME=	glib20 intlhack libxslt:build
-GNU_CONFIGURE=	yes
-CONFIGURE_ARGS=	--disable-bluray \
-		--enable-gudev \
-		--disable-libsystemd-login \
-		--enable-udisks2 \
-		--disable-gdu \
-		--enable-udev \
-		--disable-goa \
-		--enable-libmtp \
-		--disable-gtk \
-		--disable-libsystemd-login \
-		--disable-admin
+.if !exists(/usr/bin/ssh)
+BUILD_DEPENDS+=	${LOCALBASE}/bin/ssh:security/openssh-portable
+.endif
+
+USES=		gettext gnome libarchive localbase meson \
+		pkgconfig tar:xz
+USE_GNOME=	glib20 libxslt:build
+MESON_ARGS=	-Dsystemduserunitdir=no \
+		-Dtmpfilesdir=no \
+		-Dbluray=false \
+		-Dadmin=false \
+		-Dlogind=false \
+		-Dlibusb=false \
+		-Dman=true
 
 INSTALL_TARGET=	install-strip
 
 GLIB_SCHEMAS=	org.gnome.system.gvfs.enums.xml
 
 OPTIONS_SUB=	yes
-OPTIONS_DEFINE=	AVAHI SAMBA GPHOTO2 CDDA FUSE AFC GOOGLE
-OPTIONS_DEFAULT=AVAHI SAMBA GPHOTO2 CDDA FUSE GOOGLE
+OPTIONS_DEFINE=	AVAHI SAMBA GPHOTO2 CDDA FUSE AFC GOOGLE NFS
+OPTIONS_DEFAULT=AVAHI SAMBA GPHOTO2 CDDA FUSE AFC GOOGLE NFS
 CDDA_DESC=	CDDA support
 GPHOTO2_DESC=	Gphoto 2 camera support for PTP support
 SAMBA_DESC=	Samba support
 AFC_DESC=	Apple device support
 GOOGLE_DESC=	Google backend
 
-FUSE_USES=	fuse
-FUSE_CONFIGURE_ENABLE=	fuse
+FUSE_USES=	fuse:3
+FUSE_MESON_TRUE=	fuse
 
 SAMBA_USES=	samba:lib
-SAMBA_CONFIGURE_ENABLE=	samba
-SAMBA_CONFIGURE_WITH=	samba-includes=${SAMBAINCLUDES} samba-libs=${SAMBALIBS}
+SAMBA_MESON_TRUE=	smb
 
 CDDA_LIB_DEPENDS=	libcdio_paranoia.so:sysutils/libcdio-paranoia
-CDDA_CONFIGURE_ENABLE=	cdda
+CDDA_MESON_TRUE=	cdda
 
 GPHOTO2_LIB_DEPENDS=	libgphoto2.so:graphics/libgphoto2
-GPHOTO2_CONFIGURE_ENABLE=	gphoto2
+GPHOTO2_MESON_TRUE=	gphoto2
 
 AVAHI_LIB_DEPENDS=	libavahi-client.so:net/avahi-app
-AVAHI_CONFIGURE_ENABLE=	avahi
+AVAHI_MESON_TRUE=	avahi
 
 AFC_LIB_DEPENDS=	libimobiledevice.so:comms/libimobiledevice \
 			libplist.so:devel/libplist
-AFC_CONFIGURE_ENABLE=	afc
+AFC_MESON_TRUE=	afc
 
-GOOGLE_CONFIGURE_ENABLE=	google
-GOOGLE_LIB_DEPENDS=	libgdata.so:devel/libgdata \
-			libgoa-1.0.so:net/gnome-online-accounts
+GOOGLE_MESON_TRUE=	google
+GOOGLE_LIB_DEPENDS=	libgdata.so:devel/libgdata
+
+NFS_MESON_TRUE=	nfs
+NFS_LIB_DEPENDS=	libnfs.so:net/libnfs
 
 .include <bsd.port.options.mk>
 
@@ -92,15 +92,6 @@ GLIB_SCHEMAS+=	org.gnome.system.smb.gschema.xml
 
 .if ${PORT_OPTIONS:MAVAHI}
 GLIB_SCHEMAS+=	org.gnome.system.dns_sd.gschema.xml
-.endif
-
-.if ${PORT_OPTIONS:MHAL}
-LIB_DEPENDS+=	libhal.so:sysutils/hal
-RUN_DEPENDS+=	gnome-mount:sysutils/gnome-mount
-PLIST_SUB+=	HAL=""
-.else
-CONFIGURE_ARGS+=--disable-hal
-PLIST_SUB+=	HAL="@comment "
 .endif
 
 post-install:
